--- a/index.html
+++ b/index.html
@@ -178,6 +178,25 @@
           </div>
         </div>
       </article>
+      <hr>
+      <article class="proyecto row">
+        <div class="logo col-3">
+          <img src="imagenes/hostelera10_logo.png" alt="Logotipo de Hosteleria10">
+          <div class="grupo">
+            <i class='bx bxl-html5'></i>
+            <i class='bx bxl-css3' ></i>
+          </div> 
+        </div>
+        <div class="descripcion col-9">
+          <h3>Hosteleria10</h3>
+          <p>
+            Propuesta de diseño de una newsletter para una oferta de trabajo usando Gimp como herramienta de diseño y CSS avanzado para un modelo responsivo y adaptable a dispositivos móviles. 
+          </p>
+          <div class="botones">
+            <a class="btn btn-success" href="https://eduwebm.github.io/hosteleria10/" target="_blank" role="button">Visitar Página</a>
+          </div>
+        </div>
+      </article>
     </section>
     </main>
     <footer class="bg-dark">
