--- a/index.html
+++ b/index.html
@@ -197,6 +197,26 @@
           </div>
         </div>
       </article>
+      <hr>
+      <article class="proyecto row">
+        <div class="logo col-3">
+          <img src="imagenes/logo-codeweb.png" alt="Logotipo de CodeWeb">
+          <div class="grupo">
+            <i class='bx bxl-html5'></i>
+            <i class='bx bxl-css3' ></i>
+            <i class='bx bxl-jquery' ></i>
+          </div> 
+        </div>
+        <div class="descripcion col-9">
+          <h3>CodeWeb</h3>
+          <p>
+            Proyecto sencillo donde agrupo todos mis apuntes y ejercicios, así como los enlaces y vídeos favoritos, los cuales me han ayudado y pretendo que ayuden a otros en la realización de páginas web. 
+          </p>
+          <div class="botones">
+            <a class="btn btn-success" href="https://eduwebm.github.io/codeweb/" target="_blank" role="button">Visitar Página</a>
+          </div>
+        </div>
+      </article>
     </section>
     </main>
     <footer class="bg-dark">
